@@ -54,4 +54,6 @@ AOGH can be abused.
 "You look down. You see an active mine." in the dark.
 Border tiles aren't shown in the dark.
 Vladimir doesn't destroy walls on the turn when it is created.
+NetBSD and trailing slash
 Mirage puppies.
+
