@@ -1,4 +1,4 @@
 bin_PROGRAMS = mihail
-INCLUDES=-I@top_srcdir@/../FeLib/Include -I@top_srcdir@/../Main/Include -I../Include
+INCLUDES=-I@top_srcdir@/FeLib/Include -I../Include
 mihail_SOURCES = mihail.cpp
-mihail_LDADD = @top_builddir@/../FeLib/Source/libFeLib.a
+mihail_LDADD = @top_builddir@/FeLib/Source/libFeLib.a
