@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+August 14 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Certain small changes to mihail so it know finds it's missing FeLib...
+
+	Added instructions to create symbolic link to FeLib, if it isn't distributed for the user.
 
 August 14 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
 
@@ -19,3 +24,6 @@ August 14 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
 	* Configuration system has been standardized and moved largely to FeLib
 	* Added Febot engine which can be used by the Oracle of the Holy Haven of Gurus
 	  when the time comes
+
+
+	
